force-app/main/default/objects/bt_stripe__Data_Dictionary_Entry__c/fields/bt_stripe__Data_Dictionary_Values__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Data_Dictionary_Values__c</fullName>
    <label>Data Dictionary Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>