force-app/main/default/objects/bt_stripe__Data_Dictionary_Entry__c/fields/bt_stripe__Locale__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Locale__c</fullName>
    <description>The Language or Locale of the Data Dictionary Entry</description>
    <inlineHelpText>The Language or Locale of the Data Dictionary Entry</inlineHelpText>
    <label>Language / Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>af-za</fullName>
                <label>Afrikaans (South Africa)</label>
            </value>
            <value>
                <fullName>sq-al</fullName>
                <label>Albanian (Albania)</label>
            </value>
            <value>
                <fullName>ar-dz</fullName>
                <label>Arabic (Algeria)</label>
            </value>
            <value>
                <fullName>ar-bh</fullName>
                <label>Arabic (Bahrain)</label>
            </value>
            <value>
                <fullName>ar-eg</fullName>
                <label>Arabic (Egypt)</label>
            </value>
            <value>
                <fullName>ar-iq</fullName>
                <label>Arabic (Iraq)</label>
            </value>
            <value>
                <fullName>ar-jo</fullName>
                <label>Arabic (Jordan)</label>
            </value>
            <value>
                <fullName>ar-kw</fullName>
                <label>Arabic (Kuwait)</label>
            </value>
            <value>
                <fullName>ar-lb</fullName>
                <label>Arabic (Lebanon)</label>
            </value>
            <value>
                <fullName>ar-ly</fullName>
                <label>Arabic (Libya)</label>
            </value>
            <value>
                <fullName>ar-ma</fullName>
                <label>Arabic (Morocco)</label>
            </value>
            <value>
                <fullName>ar-om</fullName>
                <label>Arabic (Oman)</label>
            </value>
            <value>
                <fullName>ar-qa</fullName>
                <label>Arabic (Qatar)</label>
            </value>
            <value>
                <fullName>ar-sa</fullName>
                <label>Arabic (Saudi Arabia)</label>
            </value>
            <value>
                <fullName>ar-sd</fullName>
                <label>Arabic (Sudan)</label>
            </value>
            <value>
                <fullName>ar-sy</fullName>
                <label>Arabic (Syria)</label>
            </value>
            <value>
                <fullName>ar-tn</fullName>
                <label>Arabic (Tunisia)</label>
            </value>
            <value>
                <fullName>ar-ae</fullName>
                <label>Arabic (United Arab Emirates)</label>
            </value>
            <value>
                <fullName>ar-ye</fullName>
                <label>Arabic (Yemen)</label>
            </value>
            <value>
                <fullName>hy-am</fullName>
                <label>Armenian (Armenia)</label>
            </value>
            <value>
                <fullName>az-az</fullName>
                <label>Azerbaijani (Azerbaijan)</label>
            </value>
            <value>
                <fullName>bn-bd</fullName>
                <label>Bangla (Bangladesh)</label>
            </value>
            <value>
                <fullName>bn-in</fullName>
                <label>Bangla (India)</label>
            </value>
            <value>
                <fullName>eu-es</fullName>
                <label>Basque (Spain)</label>
            </value>
            <value>
                <fullName>be-by</fullName>
                <label>Belarusian (Belarus)</label>
            </value>
            <value>
                <fullName>bs-ba</fullName>
                <label>Bosnian (Bosnia &amp; Herzegovina)</label>
            </value>
            <value>
                <fullName>bg-bg</fullName>
                <label>Bulgarian (Bulgaria)</label>
            </value>
            <value>
                <fullName>my-mm</fullName>
                <label>Burmese (Myanmar (Burma))</label>
            </value>
            <value>
                <fullName>ca-es</fullName>
                <label>Catalan (Spain)</label>
            </value>
            <value>
                <fullName>zh</fullName>
                <label>Chinese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>